Add Change Image and Logo in Client And Personal (Edit and Create)
Add Button New Product In Compras

--- a/src/app/components/users/configuracion/configuracion.component.html
+++ b/src/app/components/users/configuracion/configuracion.component.html
@@ -10,12 +10,12 @@
             <a class="mat-menu-item" (click)="onPass()">Perfil</a>
             <a (click)="onPass1()" class="mat-menu-item"
                 *ngIf="!rol"
-            >sd</a>
+            >Configuración</a>
             <a (click)="logout()" class="mat-menu-item">Salir</a>
         </mat-menu>
     </div>
     <br>
-    <mat-grid-list cols="1" rowHeight="900px">
+    <mat-grid-list cols="1" rowHeight="1200px">
         <mat-grid-tile>
             <div class="col-md-8">
                 <mat-card class="dashboard-card" style="
@@ -168,6 +168,45 @@
                                 <!--[disabled]="!this.corporationForm.valid"-->
                                 <fa-icon [icon]="faSave" [size]="'sm'"></fa-icon>
                                 Actualizar correo
+                            </button>
+                        </div>
+                    </form>
+
+
+                    <form [formGroup]="emailForm">
+                        <div align="left">
+                            <br>
+                            <h5 class="title">Cambiar Imagen</h5>
+                        </div>
+                        <img src="{{ imageUrl }}" alt="Imágen Marca" style="width: 30%; height: auto"
+                            class="img-thumbnail">
+                        <br />
+                        <button class="btn btn-danger" style="margin-top: 5px">
+                            Eliminar Imagen
+                        </button>
+
+                        <div class="form-group">
+                            <br />
+                            <!-- <input type="text" class="form-control" id="etiquetas" placeholder="Ingrese las etiquetas" formControlName="etiquetas"> -->
+                            <input type="file" accept="image/*" (change)="onChangeFile($event.target)"
+                                class="form-control" style="padding: 0px" formControlName="urlImagen"
+                                id="imageUpload" name="imageUpload" />
+                            <small *ngIf="
+                                corporationForm.controls['urlImagen'].invalid &&
+                                (corporationForm.controls['urlImagen'].dirty ||
+                                corporationForm.controls['urlImagen'].touched)
+                            ">
+                                <small *ngIf="corporationForm.controls['urlImagen'].errors" style="color: red">
+                                    Debe seleccionar imágen
+                                </small>
+                            </small>
+                        </div>
+         
+                        <div align="center">
+                            <button (click)="actualizarImagen()" class="btn btn-primary">
+                                <!--[disabled]="!this.corporationForm.valid"-->
+                                <fa-icon [icon]="faSave" [size]="'sm'"></fa-icon>
+                                Actualizar Imagen
                             </button>
                         </div>
                     </form>
