--- a/src/app/components/shooping/menucompr/menucompr.component.html
+++ b/src/app/components/shooping/menucompr/menucompr.component.html
@@ -118,6 +118,12 @@
                         <span style="color: white"> Crear proveedor </span>
                     </button>
                 </div>
+                <div class="col-md-3">
+                    <button class="btn button boton-adicional" (click)="nuevoProducto()">
+                        <fa-icon [icon]="faFolderPlus" [size]="'lg'" style="color: #ffffff; margin-right: 10px;"></fa-icon>
+                        NUEVO PRODUCTO
+                    </button>
+                </div>
             </div>
             <br><br>
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
