Responsive Dashbors in all Roles

--- a/src/app/components/dashboard-adm/dashboard-adm.component.html
+++ b/src/app/components/dashboard-adm/dashboard-adm.component.html
@@ -13,7 +13,7 @@
         </mat-menu>           
     </div>
     <br>
-    <mat-grid-list cols="3" rowHeight="225px">
+    <mat-grid-list [cols]="getGridCols()" [rowHeight]="getRowHeight()">
         <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
             <mat-card class="dashboard-card">
                 <mat-card-header>
