--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -7,13 +7,17 @@
             <a routerLink="/navegation-cl" rel="noopener noreferrer">
                 <img src="https://atiendo.ec/black/img/logo.png">
             </a>
+            <button mat-list-item (click)="drawer.toggle()" style="background-color: #ffffff00; color: white; border: none; padding: 0 15px; width: 25%; float: right;" (click)="toggleNavbar()">
+                <span class="material-icons-outlined" style="font-size: 24px">menu</span>
+            </button>
         </div>
         <p align="center" style="color:aliceblue">_________________________________</p>
         <mat-nav-list>
-            <a mat-list-item routerLink="/navegation-cl" style="color: white">
+            <a mat-list-item routerLink="/navegation-cl" style="color: white" (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">pie_chart</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dashboard</font>
             </a>
+
             <a mat-list-item style="color: white" (click)="transaccionesExpandidas = !transaccionesExpandidas">
                 <span class="material-icons-outlined" style="font-size: 24px">remove_done</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Transacciones</font>
@@ -21,62 +25,82 @@
             </a>
             <div *ngIf="transaccionesExpandidas" class="subitem-menu">
                 <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenesshooping'] } }]"
-                    style="color: white">
+                    style="color: white"
+                    (click)="closeSidenavIfSmallScreen(drawer)"
+                    >
                     <span class="material-icons-outlined" style="font-size: 20px">shopping_cart</span>
                     <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Compras</font>
                 </a>
                 <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenegresos'] } }]"
-                    style="color: white">
+                    style="color: white"
+                    (click)="closeSidenavIfSmallScreen(drawer)"
+                    >
                     <span class="material-icons-outlined" style="font-size: 20px">payment</span>
                     <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ventas</font>
                 </a>
- 
+                <!--
+                <a mat-list-item style="color: white">
+                    <span class="material-icons-outlined" style="font-size: 20px">monetization_on</span>
+                    <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cuentas</font>
+                </a>
+                -->
             </div>
-            <a mat-list-item style="color: white" [routerLink]="[{ outlets: { contentClient: ['cuadre-caja'] } }]">
+            <a mat-list-item style="color: white" [routerLink]="[{ outlets: { contentClient: ['cuadre-caja'] } }]"
+            (click)="closeSidenavIfSmallScreen(drawer)"
+            >
                 <span class="material-icons-outlined" style="font-size: 20px">monetization_on</span>
                 <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cuadre de Caja</font>
             </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['inventarios-productos'] } }]"
-                style="color: white">
+                style="color: white"
+                (click)="closeSidenavIfSmallScreen(drawer)"
+                >
                 <span class="material-icons-outlined" style="font-size: 24px">apps</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Productos</font>
             </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['inventarios-almacen'] } }]"
-                style="color: white">
+                style="color: white"
+                (click)="closeSidenavIfSmallScreen(drawer)"
+                >
                 <span class="material-icons-outlined" style="font-size: 24px">apps</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Inventarios</font>
             </a>
-
-            <a mat-list-item href="#" class="disabled-link" style="color: white">
+            <!--
+                <a mat-list-item href="#" style="color: white">
+                <span class="material-icons-outlined" style="font-size: 24px">widgets</span>
+                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido</font>
+            </a>
+            -->
+            <a mat-list-item href="#" class="disabled-link" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">widgets</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido</font>
               </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almaceningresos'] } }]" style="color: white">
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almaceningresos'] } }]" style="color: white" >
                 <span class="material-icons-outlined" style="font-size: 24px">shopping_cart</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Plasticaucho</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['movimientos'] } }]" style="color: white">
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['movimientos'] } }]" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">monitor</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Movimientos</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenes'] } }]" style="color: white">
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenes'] } }]" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">location_city</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Almacenes</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['tercerosalmacen'] } }]" style="color: white">
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['tercerosalmacen'] } }]" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">person</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Terceros</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['proveedores'] } }]" style="color: white">
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['proveedores'] } }]" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">supervisor_account</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Proveedores</font>
             </a>
 
-            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['personal'] } }]" style="color: white">
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['personal'] } }]" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">supervisor_account</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Personal</font>
             </a>
-            <a mat-list-item (click)="logout()" style="color: white">
+            <a mat-list-item (click)="logout()" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">logout</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Salir</font>
             </a>
@@ -84,6 +108,16 @@
 
     </mat-sidenav>
     <mat-sidenav-content>
+        <button mat-list-item (click)="drawer.toggle()" (click)="toggleNavbar()" *ngIf="(isHandset$ | async) === true || !showNavbar "
+        style="background-color: #ffffff00; color: #5e72e4; border: none; padding: 0 15px; float: left; top: 20px; width: 10%; left: 15px;"
+        [ngClass]="{
+            'no-float': (isHandset$ | async) === false,
+            'float': (isHandset$ | async) !== false
+        }"
+        >
+            <span class="material-icons-outlined" style="font-size: 24px"
+            >menu</span>
+        </button>
         <router-outlet name="contentClient"></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
