--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -100,7 +100,7 @@
                 <span class="material-icons-outlined" style="font-size: 24px">supervisor_account</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Personal</font>
             </a>
-            <a mat-list-item (click)="logout()" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
+            <a mat-list-item (click)="logout()" style="color: white" (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">logout</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Salir</font>
             </a>
@@ -109,7 +109,7 @@
     </mat-sidenav>
     <mat-sidenav-content>
         <button mat-list-item (click)="drawer.toggle()" (click)="toggleNavbar()" *ngIf="(isHandset$ | async) === true || !showNavbar "
-        style="background-color: #ffffff00; color: #5e72e4; border: none; padding: 0 15px; float: left; top: 20px; width: 10%; left: 15px;"
+        style="background-color: #312d2d11; color: #5e72e4; border: none; padding: 0 15px; float: left; top: 20px; width: 10%; left: 15px; display: flex; justify-content: center; align-items: center;"
         [ngClass]="{
             'no-float': (isHandset$ | async) === false,
             'float': (isHandset$ | async) !== false
