--- a/src/app/components/sales/almacenesegresos/almacenesegresos.component.html
+++ b/src/app/components/sales/almacenesegresos/almacenesegresos.component.html
@@ -36,7 +36,7 @@
                                      text-align:center; 
                                      margin-top: 10px;
                                      ">
-                                <span style="color:white;">
+                                <span style="color:white">
                                     ENTRAR
                                 </span>
                             </a>
