Responsibe Dashboard Personal

--- a/src/app/components/navegation-facturador/navegation-facturador.component.css
+++ b/src/app/components/navegation-facturador/navegation-facturador.component.css
@@ -58,3 +58,14 @@
   .subitem-menu {
     margin-left: 20px; /* Ajusta el valor según la separación deseada */
   }
+
+  
+.no-float {
+  float: left !important;
+
+}
+
+.float {
+  float: none !important;
+  z-index: 999;
+}
