--- a/src/app/components/shooping/almacenesshooping/almacenesshooping.component.html
+++ b/src/app/components/shooping/almacenesshooping/almacenesshooping.component.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="card-body ">
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dataTable">
                 <thead style="color: #636363;">
                     <tr>
                         <th style="width: 20%; ">Nombre</th>
@@ -29,7 +29,9 @@
                         <td>{{almacen.codigo}}</td>
                         <td>{{almacen.pto_emision}}</td>
                         <td>
-                            <a class="btn button" (click)="abrirVista(almacen)"
+                            <a class="btn button entrar-btn" (click)="abrirVista(almacen)"
+                                [attr.data-almacen]="almacen | json"
+                                id="btnEntrar"
                                 style="border-radius: 5px; 
                                        background: rgb(49,99,173,0.8); 
                                        font-size: 15px; width:120px; 
