--- a/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
+++ b/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
@@ -15,7 +15,7 @@
     </div>
     <br /><br />
     <div class="table-container">
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dataTable">
             <thead style="color: #636363;" class="fixed-header">
                 <tr>
                     <th style="width: 10%; ">CÓDIGO</th>
@@ -51,6 +51,7 @@
                     </td>
                     <td style="text-align: center;">
                         <a class="btn button" (click)="crearDetalle(proveedorProducto)" 
+                            [attr.data-proveedor]="proveedorProducto | json"
                             [ngClass]="{'btn-success': proveedorProducto.productoExistente, 'btn-primary': !proveedorProducto.productoExistente}"
                             style="border-radius: 5px; font-size: 15px; width:120px; height:35px; text-align:center; margin-top: 10px;"
                             [class.disabled]="botonBloqueado"
