--- a/src/app/components/shooping/menucompr/menucompr.component.html
+++ b/src/app/components/shooping/menucompr/menucompr.component.html
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <br><br>
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dataTable">
                 <thead style="color: #636363;">
                     <tr>
                         <th style="width: 10%; ">ID Producto</th>
@@ -166,18 +166,26 @@
                         <td>{{detalleMovimientos.color}}</td>
                         <td style="text-align: center;">
                             <ng-container *ngIf="!editarDetalle || i !== detalleEditIndex">
-                                <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;"
+                                <span [attr.data-index]="i">
+                                <fa-icon [icon]="faEdit" class="btn btn-info editar-icon" [size]="'lg'" style="margin-right: 5px;"
                                     data-placement="bottom" (click)="editarDetalleMovimiento(i)"
                                     title="Editar Detalle"></fa-icon>
+                                </span>
+
                             </ng-container>
                             <ng-container *ngIf="editarDetalle && i === detalleEditIndex">
+                                <span [attr.data-index]="i">
                                 <fa-icon [icon]="faCheck" class="btn btn-success" [size]="'lg'"
                                     style="margin-right: 5px;" data-placement="bottom"
                                     (click)="aplicarCambiosDetalle(i)" title="Aplicar"></fa-icon>
+                                </span>
                             </ng-container>
-                            <fa-icon [icon]="faTrashAlt" class="btn btn-danger" [size]=" 'lg' " data-placement="bottom"
+                            <span [attr.data-index]="detalleMovimientos | json">
+                            <fa-icon [icon]="faTrashAlt" class="btn btn-danger delete-icon" [size]=" 'lg' " data-placement="bottom"
                                 (click)=" eliminarDetalle(detalleMovimientos)"
-                                title="Eliminar Modelo Producto"></fa-icon>
+                                title="Eliminar Modelo Producto">
+                            </fa-icon>
+                            </span>
                         </td>
                     </tr>
                 </tbody>
