--- a/src/app/components/shooping/menucompr/menucompr.component.html
+++ b/src/app/components/shooping/menucompr/menucompr.component.html
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <br><br>
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dataTable">
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dtdt">
                 <thead style="color: #636363;">
                     <tr>
                         <th style="width: 10%; ">ID Producto</th>
