--- a/src/app/components/providers/proveedores/proveedores.component.html
+++ b/src/app/components/providers/proveedores/proveedores.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="card-body ">
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dtdt">
             <thead style="color: #636363;">
                 <tr>
                     <th style="width: 10%; ">Nombre</th>
@@ -31,11 +31,21 @@
                     <td>{{proveedor.ciudad}}</td>
                     <td>{{proveedor.direccionprov}}</td>
                     <td style="text-align: center;">
-                        <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;"
+
+                        <span [attr.data-proveedor]="proveedor | json" >
+                        <fa-icon [icon]="faEdit" class="btn btn-info editar-icon" [size]="'lg'" style="margin-right: 5px;"
                             data-placement="bottom" title="Editar Modelo Producto"
-                            (click)=" editarProveedor(proveedor) "></fa-icon>
-                        <fa-icon [icon]="faTrashAlt " class="btn btn-danger " [size]=" 'lg' " data-placement="bottom "
+                            (click)=" editarProveedor(proveedor) ">
+                        </fa-icon>
+                        </span>
+
+                        <span [attr.data-proveedor]="proveedor | json" >
+
+                        <fa-icon [icon]="faTrashAlt " class="btn btn-danger delete-icon " [size]=" 'lg' " data-placement="bottom "
                             title="Eliminar Modelo Producto" (click)="eliminarProveedor(proveedor)"></fa-icon>
+                        </span>
+
+                        
                     </td>
                 </tr>
             </tbody>
