--- a/src/app/components/warehouses/almacenessociedad/almacenessociedad.component.html
+++ b/src/app/components/warehouses/almacenessociedad/almacenessociedad.component.html
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="card-body ">
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dtdt">
                 <thead style="color: #636363;">
                     <tr>
                         <th style="width: 20%; ">Nombre</th>
@@ -30,8 +30,10 @@
                         <td>{{almacen.codigo}}</td>
                         <td>{{almacen.pto_emision}}</td>
                         <td>
-                            <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'sm'" style="margin-right: 5px;" data-placement="bottom" title="Editar Almacen" (click)="editarAlmacenes(almacen)"></fa-icon>
-                            <fa-icon [icon]="faTrashAlt" class="btn btn-danger" [size]="'lg'" data-placement="bottom" title="Eliminar Almacen" (click)="eliminarAlmacenes(almacen)"></fa-icon>
+                            <span [attr.data-almacen]="almacen | json">
+                                <fa-icon [icon]="faEdit" class="btn btn-info editar-icon" [size]="'sm'" style="margin-right: 5px;" data-placement="bottom" title="Editar Almacen" (click)="editarAlmacenes(almacen)"></fa-icon>
+                                <fa-icon [icon]="faTrashAlt" class="btn btn-danger delete-icon" [size]="'lg'" data-placement="bottom" title="Eliminar Almacen" (click)="eliminarAlmacenes(almacen)"></fa-icon>
+                            </span>
                         </td>
                     </tr>
                 </tbody>
